--- a/wiki/Equipe.wiki
+++ b/wiki/Equipe.wiki
@@ -1,1 +1,20 @@
 ||<a href="https://code.google.com/p/curtindo-recife/">Home</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/DescricaoDoProjeto">Descrição Do Sistema</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/Arquivos">Arquivos</a>||||<a href="https://code.google.com/p/curtindo-recife/wiki/Equipe">Equipe</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/VideoAndApk">Video e apk</a>||
+
+
+<H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Equipe</p></font></b></H2>
+<hr>
+
+<H3 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Gerência de desenvolvimento de software</p></font></b></H3>
+<hr>
+Carlos César Bezerra Fonseca: Gerência de Configuração e Qualidade de software. (cc_bf@hotmail.com);<br>
+Geraldo Gomes da Cruz Júnior: Scrum Master e Gerente do projeto (geraldoj8@gmail.com);<br> 
+Larissa Karollyne de Melo Ferreira: P.O. e Tester (larissakarollyne@gmail.com);<br>
+<hr>
+<H3 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Processo de desenvolvimento de software</p></font></b></H3>
+<hr>
+Blenda: Design e Desenvolvimento.(blendaguedes@hotmail.com);<br>
+Christian: Design e Desenvolvimento(c.spinelli93@gmail.com);<br> 
+Demis: Design (Suporte), Desenvolvimento e Banco (demismg72@gmail.com);<br>
+Renan: Desenvolvimento e Banco (renanufrpe@gmail.com);<br>
+<br>
+<hr>
