--- a/wiki/DescricaoDoProjeto.wiki
+++ b/wiki/DescricaoDoProjeto.wiki
@@ -1,1 +1,27 @@
 ||<a href="https://code.google.com/p/curtindo-recife/">Home</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/DescricaoDoProjeto">Descrição Do Sistema</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/Arquivos">Arquivos</a>||||<a href="https://code.google.com/p/curtindo-recife/wiki/Equipe">Equipe</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/VideoAndApk">Video e apk</a>||
+
+<H2><b><FONT FACE="TIMES" SIZE="5"><p align="center">Descrição do projeto</p></font></b></H2>
+<HR SIZE=1 WIDTH=100% COLOR="BLACK"> 
+
+<p align="JUSTIFY">Recife é um município e capital do estado de Pernambuco, no Brasil. Com uma área de aproximadamente 217km2, está localizado às margens do oceano Atlântico, e possui uma população de 1 599 514 habitantes. É sede da Região Metropolitana do Recife, a maior aglomeração urbana do Norte-Nordeste e quinta maior do Brasil, com 3,7 milhões de habitantes, além de terceira metrópole mais densamente habitada do país, superada apenas por São Paulo e Rio de Janeiro, e quarta maior rede urbana do Brasil em população.
+
+Dentre as muitas alcunhas atribuídas ao Recife, "Veneza Brasileira" é a mais conhecida. Com um grande potencial turístico e forte vocação para o turismo de negócios, frequentemente a cidade é escolhida como sede de diversos eventos, como simpósios, jornadas e congressos. 
+
+O Recife atrai turistas de todo o mundo. Destacam-se entre os motivos desta atração as manifestações culturais como o Carnaval e o São João. O Recife é o portão de entrada do litoral de Pernambuco, de onde partem os turistas que chegam de avião.
+
+O Recife é um município multicultural: suas músicas e danças têm influências africana, indígena e europeia. O bairro do Recife é o principal conjunto arquitetônico e cultural do município, abrigando galerias, museus e outros espaços culturais. 
+
+Além de todas essas atrações os recifenses ainda tem paixões pelo esporte, cinema, teatro, festas e gastronomia.
+
+A cidade é considerada um dos mais importantes polos de tecnologias da informação do país. O Porto Digital, que abriga cerca de cem empresas, é reconhecido pela A. T. Kearny como o maior parque tecnológico do Brasil em faturamento e número de empresas, gerando três mil empregos e participando com 3,5% no PIB do Estado de Pernambuco.
+
+Com o intuído de juntar o potencial turístico e a própria alegria do povo recifense, com os marcos tecnológicos que se erguem nessa cidade, surge a proposta do Curtindo Recife.
+
+O Curtindo recife se classifica como um sistema de informações e cadastros de eventos na cidade de Recife.
+
+Com o Curtindo Recife o usuário poderá ter acesso aos diversos eventos que ocorrem no Recife e região metropolitana, como festas, cinema, esportes e eventos culturais. O curtindo Recife também permite o cadastro de eventos por parte do usuário, esses podem cadastrar suas festas e torna-las mais populares nas redes sociais. Também podem classificar os eventos que mais gostar, como também achar a localização desses eventos.
+
+Por fim o Curtindo Recife surge como uma proposta não apenas de uma agenda de eventos, mas um sistema onde pequenas festas e eventos populares terão espaço, bem como localização geográfica e um imenso potencial de uso tanto para moradores da região metropolitana, como para turistas que visitam a cidade.</p> 
+
+<br>
+<hr>
