--- a/wiki/Arquivos.wiki
+++ b/wiki/Arquivos.wiki
@@ -1,1 +1,22 @@
 ||<a href="https://code.google.com/p/curtindo-recife/">Home</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/DescricaoDoProjeto">Descrição Do Sistema</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/Arquivos">Arquivos</a>||||<a href="https://code.google.com/p/curtindo-recife/wiki/Equipe">Equipe</a>||<a href="https://code.google.com/p/curtindo-recife/wiki/VideoAndApk">Video e apk</a>||
+
+<H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Arquivos</p></font></b></H2>
+<hr>
+<a href="">Plano de Gerência de Configuração</a> <br>
+<a href="https://docs.google.com/document/d/1KgdPtRupGl9MykOPllCxpe6ppOvJGDOFovCTfduqdXU/edit?usp=sharing">Escopo</a> <br>
+<a href="">CANVAS</a> <br>
+
+
+<br>
+
+<hr>
+<H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Itens de Configuração</p></font></b></H2>
+<hr>
+<a href="https://docs.google.com/spreadsheet/ccc?key=0AphIXVRKD54qdEV5TkNfMUxuUFFqNUJTN01XNGZjeFE&usp=sharing">Definição dos processos de desenvolvimento do Curtindo Recife</a> <br>
+<a href="https://docs.google.com/document/d/1ZooqdOw4OP6cdMBX8ebn7KT3pLfvlgiMJ856CzQvAIs/edit?usp=sharing">Definição iniciais</a> <br>
+<a href="https://docs.google.com/forms/d/1SNK3_DJ2Dy4m8umagQt2btqaB1F1rqvW3BRoI6wzI08/viewform">Definições de Design</a> <br>
+
+
+<br>
+
+<hr>
