--- a/wiki/Arquivos.wiki
+++ b/wiki/Arquivos.wiki
@@ -2,7 +2,7 @@
 
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Arquivos</p></font></b></H2>
 <hr>
-<a href="">Plano de Gerência de Configuração</a> <br>
+<a href="https://drive.google.com/file/d/0B5hIXVRKD54qSzJFTzJSaVQ3bms/edit?usp=sharing">Plano de Gerência de Configuração</a> <br>
 <a href="https://docs.google.com/document/d/1KgdPtRupGl9MykOPllCxpe6ppOvJGDOFovCTfduqdXU/edit?usp=sharing">Escopo</a> <br>
 <a href="">CANVAS</a> <br>
 
@@ -15,6 +15,7 @@
 <a href="https://docs.google.com/spreadsheet/ccc?key=0AphIXVRKD54qdEV5TkNfMUxuUFFqNUJTN01XNGZjeFE&usp=sharing">Definição dos processos de desenvolvimento do Curtindo Recife</a> <br>
 <a href="https://docs.google.com/document/d/1ZooqdOw4OP6cdMBX8ebn7KT3pLfvlgiMJ856CzQvAIs/edit?usp=sharing">Definição iniciais</a> <br>
 <a href="https://docs.google.com/forms/d/1SNK3_DJ2Dy4m8umagQt2btqaB1F1rqvW3BRoI6wzI08/viewform">Definições de Design</a> <br>
+<a href="https://drive.google.com/file/d/0B5hIXVRKD54qRGJ2S1piYS0tQzQ/edit?usp=sharing">Configuração Android</a> <br>
 
 
 <br>
