Edited wiki page Equipe through web user interface.

--- a/wiki/Equipe.wiki
+++ b/wiki/Equipe.wiki
@@ -14,7 +14,7 @@ Larissa Karollyne de Melo Ferreira: P.O. e Tester (larissakarollyne@gmail.com);<
 <hr>
 Blenda Guedes: Design e Desenvolvimento.(blendaguedes@hotmail.com);<br>
 Christian Spinelli: Design e Desenvolvimento(c.spinelli93@gmail.com);<br> 
-Demis: Design (Suporte), Desenvolvimento e Banco (demismg72@gmail.com);<br>
+Demis Gomes: Design (Suporte), Desenvolvimento e Banco (demismg72@gmail.com);<br>
 Renan Azeredo: Desenvolvimento e Banco (renanufrpe@gmail.com);<br>
 <br>
 <hr>
