--- a/wiki/Scrum.wiki
+++ b/wiki/Scrum.wiki
@@ -2,7 +2,8 @@
 
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Scrum Backlog</p></font></b></H2>
 <hr>
-<a href="http://scrumy.com/curtindo-recife-prototipo">SPRINT 1</a> <br>
+<a href="http://scrumy.com/curtindo-recife-prototipo">SRINT Protótipo</a> <br>
+<a href="http://scrumy.com/curtindo-recife-sprint1">SPRINT 1</a> <br>
 <br>
 <hr>
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Agile Development</p></font></b></H2>
