Edited wiki page Arquivos through web user interface.

--- a/wiki/Arquivos.wiki
+++ b/wiki/Arquivos.wiki
@@ -35,6 +35,7 @@
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Auditorias</p></font></b></H2>
 <hr>
 <a href="">Auditoria 1</a> <br>
+<a href="">Auditoria 2</a> <br>
 <br>
 <hr>
 
