--- a/wiki/Arquivos.wiki
+++ b/wiki/Arquivos.wiki
@@ -26,6 +26,7 @@
 <a href="https://docs.google.com/document/d/1F9RRZ93kNTwehsuwfMQW8eko-Pkg1AmcUxKBCyjCrhg/edit?usp=sharing">1º Validação do protótipo</a> <br>
 <a href="https://drive.google.com/file/d/0B5hIXVRKD54qSXNHNGJkMFQ3LXc/edit?usp=sharing">Proposta Gerência</a> <br>
 <a href="https://docs.google.com/document/d/16Z53T6WW1OEWxIAHfHBAnqhJExyDUKOfV061HypUOFE/edit?usp=sharing">Detalhamento de requisitos</a> <br>
+<a href="https://docs.google.com/spreadsheet/ccc?key=0AphIXVRKD54qdHJTb2NBcmJ3cjR0enkzNnRxcTBxcEE&usp=sharing">User Stories</a> <br>
 
 
 <br>
