--- a/wiki/Scrum.wiki
+++ b/wiki/Scrum.wiki
@@ -8,6 +8,7 @@
 <a href="http://scrumy.com/curtindo-recife-sprint3">SPRINT 3</a> <br>
 <a href="http://scrumy.com/curtindo-recife-sprint4">SPRINT 4</a> <br>
 <a href="http://scrumy.com/curtindo-recife-sprint5">SPRINT 5</a> <br>
+<a href="http://scrumy.com/curtindo-recife-sprint6">SPRINT 6</a> <br>
 <br>
 <hr>
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Agile Development</p></font></b></H2>
